--- a/header.html
+++ b/header.html
@@ -1,3 +1,9 @@
+<!-- AUTH GATE (MUST LOAD FIRST) -->
+<script src="auth.js"></script>
+
+<!-- GLOBAL STYLES -->
+<link rel="stylesheet" href="header.css">
+
 <!-- ==============================
      GLOBAL HEADER – FINAL
      ============================== -->
@@ -25,7 +31,7 @@
     <a href="products.html" data-module="products">Products</a>
     <a href="barrel-dashboard.html" data-module="barrels">Barrels</a>
     <a href="dashboard.html" data-module="fermentation">Fermentation</a>
-    <a href="compliance,html" data-module="compliance">Compliance</a>
+    <a href="compliance.html" data-module="compliance">Compliance</a>
   </nav>
 
 </div>
