--- a/header.html
+++ b/header.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="header.css">
 <!-- ==============================
      GLOBAL HEADER – FINAL
      ============================== -->
