--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="auth.js"></script>
   <meta charset="UTF-8" />
   <title>797 Distillery - New Barrel Entry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
