--- a/recipe-scaling.html
+++ b/recipe-scaling.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <script src="auth.js"></script>
+  <script src="bootstrap.js"></script>
   <meta charset="UTF-8" />
   <title>Recipe Scaling</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
