--- a/sample-builder.html
+++ b/sample-builder.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <script src="auth.js"></script>
+  <script src="bootstrap.js"></script>
   <!-- FORCE NO CACHE (DEV) -->
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
