--- a/mash.html
+++ b/mash.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>797 Distillery — Mash Builder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Shared Header / Nav -->
+  <link rel="stylesheet" href="../header.css" />
+
+  <!-- Mash App Styles -->
+  <link rel="stylesheet" href="mash.css" />
+</head>
+
+<body>
+
+  <!-- GLOBAL HEADER -->
+  <div id="global-header"></div>
+
+  <script>
+    const PAGE_TITLE = "Mash Builder";
+    const PAGE_SUBTITLE =
+      "Build, scale, and log mash bills for 797 Distillery.";
+  </script>
+
+  <script>
+    fetch("../header.html")
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("global-header").innerHTML = html;
+      });
+  </script>
+
+  <!-- PAGE CONTENT -->
+  <main class="mash-container">
+
+    <!-- MASH SETUP -->
+    <section class="panel">
+      <h2>Mash Setup</h2>
+
+      <div class="grid">
+
+        <div>
+          <label>Mash Type</label>
+          <select id="mashSelect">
+            <option value="">Select mash…</option>
+            <option value="MOONSHINE_BASE">Moonshine Base</option>
+            <option value="GRAIN_WHISKEY_BASE">Grain Whiskey Base</option>
+            <option value="HYBRID_WHISKEY_BASE">Hybrid Whiskey</option>
+            <option value="RUM_BASE">Rum Wash</option>
+          </select>
+        </div>
+
+        <div>
+          <label>Fill Volume (gal)</label>
+          <input
+            type="number"
+            id="fillGal"
+            min="1"
+            step="1"
+            placeholder="e.g. 235"
+          />
+        </div>
+
+      </div>
+
+      <button id="btnBuildMash" class="primary">
+        Build Mash
+      </button>
+    </section>
+
+    <!-- RESULTS -->
+    <section class="panel" id="resultsPanel" hidden>
+      <h2>Mash Bill</h2>
+
+      <div id="mashResults"></div>
+
+      <button id="btnStartMash" class="warn">
+        Start Mash (Lock & Create Log)
+      </button>
+    </section>
+
+    <!-- LOG -->
+    <section class="panel" id="logPanel" hidden>
+      <h2>Production Log</h2>
+      <div id="logView"></div>
+    </section>
+
+  </main>
+
+  <!-- SCRIPTS -->
+  <script type="module" src="mash-ui.js"></script>
+
+</body>
+</html>
 
