--- a/products.html
+++ b/products.html
@@ -135,12 +135,12 @@
 
       <!-- BASE RECIPES -->
       <section class="card">
-        <h2>Base Recipes & Mash Bills</h2>
+        <h2>Mash Bills & Base Recipes</h2>
         <p>
           Canonical recipes used for scaling and production reference.
         </p>
-        <a href="recipes.html">
-          View Base Recipes →
+        <a href="mash.html">
+          Mash Builder →
         </a>
       </section>
 
