--- a/mash.html
+++ b/mash.html
@@ -61,6 +61,17 @@
             placeholder="e.g. 235"
           />
         </div>
+      <div>
+        <label>Target Wash ABV (%)</label>
+        <input
+          type="number"
+          id="targetABV"
+          step="0.1"
+          min="6"
+          max="11.5"
+          placeholder="optional"
+        />
+      </div>
 
       </div>
 
