--- a/mash.html
+++ b/mash.html
@@ -3,11 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>797 Distillery — Mash Builder</title>
 
+  <!-- FORCE NO CACHE (DEV) -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
+  <!-- GLOBAL HEADER CSS -->
+  <link rel="stylesheet" href="header.css?v=1.0.0" />
+
+  <!-- MASH APP CSS -->
   <link rel="stylesheet" href="mash.css?v=1.0.0" />
 </head>
-<body>
+
+<body class="dashboard">
+
+  <!-- =========================
+       GLOBAL HEADER
+       ========================= -->
+  <div id="global-header"></div>
+
+  <script>
+    /* Match pattern used by your other apps */
+    const PAGE_TITLE = "Mash Builder";
+    const PAGE_SUBTITLE =
+      "Scale mash bills, target wash ABV, and estimate stripping output.";
+  </script>
+
+  <script>
+    fetch("header.html")
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("global-header").innerHTML = html;
+      });
+  </script>
+
+  <!-- =========================
+       APP CONTENT
+       ========================= -->
   <main class="mash-container">
 
     <div class="panel mash-panel">
@@ -21,18 +56,35 @@
 
         <div>
           <label for="fillGal">Fill Volume (gal)</label>
-          <input id="fillGal" type="number" step="1" min="1" placeholder="e.g. 55 or 235" />
+          <input
+            id="fillGal"
+            type="number"
+            step="1"
+            min="1"
+            placeholder="e.g. 55 or 235"
+          />
         </div>
 
         <div>
           <label for="targetABV">Target Wash ABV (%)</label>
-          <input id="targetABV" type="number" step="0.1" min="6" max="14" placeholder="optional" />
+          <input
+            id="targetABV"
+            type="number"
+            step="0.1"
+            min="6"
+            max="14"
+            placeholder="optional"
+          />
         </div>
       </div>
 
       <div class="actions">
-        <button id="btnBuildMash" class="primary">Build Mash</button>
-        <button id="btnStartMash" class="warn" disabled>Start Mash (Log)</button>
+        <button id="btnBuildMash" class="primary">
+          Build Mash
+        </button>
+        <button id="btnStartMash" class="warn" disabled>
+          Start Mash (Log)
+        </button>
       </div>
     </div>
 
@@ -48,6 +100,10 @@
 
   </main>
 
+  <!-- =========================
+       APP SCRIPT
+       ========================= -->
   <script type="module" src="mash-ui.js?v=1.0.0"></script>
+
 </body>
 </html>
