--- a/mash.html
+++ b/mash.html
@@ -1,164 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
   <title>797 Distillery — Mash Builder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Shared header -->
-  <link rel="stylesheet" href="header.css?v=1.0.0" />
-  <!-- Mash app css -->
-  <link rel="stylesheet" href="mash.css?v=1.0.0" />
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="mash.css">
 </head>
 <body>
-  <!-- GLOBAL HEADER -->
-  <div id="global-header"></div>
 
-  <script>
-    const PAGE_TITLE = "Mash Builder";
-    const PAGE_SUBTITLE = "Baseline recipes + ABV-driven scenario projections (saved test batches).";
-    fetch("header.html?v=1.0.0")
-      .then(r => r.text())
-      .then(html => (document.getElementById("global-header").innerHTML = html))
-      .catch(()=>{});
-  </script>
+<div id="global-header"></div>
 
-  <main class="mash-container">
-    <div class="topbar">
-      <div class="titleblock">
-        <h1>Mash Builder</h1>
-        <div class="sub">Baseline recipes + ABV-driven scenario projections (saved test batches).</div>
-      </div>
-      <div class="engine-stamp" id="engineStamp">ENGINE VERSION: (loading…)</div>
+<script>
+fetch("header.html")
+  .then(r => r.text())
+  .then(html => document.getElementById("global-header").innerHTML = html);
+</script>
+
+<main>
+
+  <h1>Mash Builder</h1>
+  <div class="subtitle">Moonshine + Rum — built for your 55 / 235 tanks and 53 / 150 stills.</div>
+
+  <!-- ALWAYS VISIBLE (even if JS fails) -->
+  <div id="engineStamp">ENGINE VERSION: (loading…)</div>
+
+  <div id="fatalError"></div>
+
+  <!-- SETUP -->
+  <div class="panel">
+    <h2>Setup</h2>
+
+    <div class="row">
+      <label>Mash Type</label>
+      <select id="mashSelect"></select>
     </div>
 
-    <section class="panel">
-      <h2>Setup</h2>
+    <div class="row">
+      <label>Tank (working fill)</label>
+      <select id="tankSelect"></select>
+    </div>
 
-      <div class="grid">
-        <div>
-          <label for="mashSelect">Mash Type</label>
-          <select id="mashSelect"></select>
-        </div>
+    <div class="row">
+      <label>Fill Volume (gal)</label>
+      <input id="fillGal" type="number">
+    </div>
 
-        <div>
-          <label for="tankSelect">Tank (quick fill)</label>
-          <select id="tankSelect"></select>
-          <div class="hint">Selecting a tank sets Fill Volume to that working fill.</div>
-        </div>
+    <div class="row">
+      <label>Target Wash ABV (%)</label>
+      <input id="targetAbv" type="number" step="0.1">
+    </div>
 
-        <div>
-          <label for="fillGal">Fill Volume (gal)</label>
-          <input id="fillGal" type="number" min="1" step="0.5" />
-          <div class="hint">You can type any value (not locked).</div>
-        </div>
+    <div class="row">
+      <label>Stripping Still</label>
+      <select id="stillSelect"></select>
+    </div>
 
-        <div>
-          <label for="targetAbv">Scenario Target Wash ABV (%)</label>
-          <input id="targetAbv" type="number" min="1" max="20" step="0.1" />
-          <div class="hint" id="targetHint"></div>
-        </div>
+    <div class="row">
+      <label>Low Wines Avg (strip) %ABV</label>
+      <input id="stripProof" type="number" step="1">
+    </div>
 
-        <div>
-          <label for="stillSelect">Stripping Still</label>
-          <select id="stillSelect"></select>
-        </div>
+    <div class="row">
+      <label>Charge Fill % of still</label>
+      <input id="chargeFillPct" type="number" step="1">
+    </div>
 
-        <div>
-          <label for="stripProof">Low Wines Avg (strip) %ABV</label>
-          <input id="stripProof" type="number" min="15" max="60" step="0.5" />
-          <div class="hint">Used for no-cuts strip estimate.</div>
-        </div>
+    <!-- Checkbox (fixed row class) -->
+    <div class="row checkbox-row">
+      <input type="checkbox" id="rumAdjustMode">
+      <label for="rumAdjustMode">
+        Adjust rum L350 gallons to hit Target ABV (dedicated mode)
+      </label>
+    </div>
 
-        <div>
-          <label for="chargeFillPct">Charge Fill % of still</label>
-          <input id="chargeFillPct" type="number" min="50" max="98" step="1" />
-          <div class="hint">Charge-based (not fermenter-based).</div>
-        </div>
+    <div class="row buttons">
+      <button id="btnRecalc">Recalculate</button>
+      <button id="btnReset">Reset</button>
+    </div>
+  </div>
 
-        <div class="lockrow">
-          <label class="checkbox">
-            <input type="checkbox" id="rumAdjustMode" />
-            Adjust rum L350 gallons to hit Target ABV (dedicated mode)
-          </label>
-          <div class="hint">OFF by default (rule). When ON, L350 can only increase (never decrease).</div>
-        </div>
-      </div>
+  <!-- RESULTS -->
+  <div class="panel">
+    <h2>Results</h2>
 
-      <div class="actions">
-        <button id="btnRecalc" class="btn">Recalculate</button>
-        <button id="btnReset" class="btn btn2">Reset</button>
-      </div>
+    <div id="baselineBlock"></div>
+    <div id="scenarioBlock"></div>
+    <div id="stripBlock"></div>
 
-      <div id="fatalError" class="fatal" style="display:none"></div>
-    </section>
+    <div id="ruleBlock">
+      <h3>Rule Notes</h3>
+      <div id="ruleNotes"></div>
+    </div>
+  </div>
 
-    <section class="panel">
-      <h2>Scenario (Save a test batch)</h2>
+</main>
 
-      <div class="scenario-grid">
-        <div>
-          <label for="scenarioName">Scenario Name</label>
-          <input id="scenarioName" type="text" placeholder="e.g. Moonshine 9.5% test" />
-          <div class="hint">Saved locally (browser). Doesn’t change your base recipe.</div>
-        </div>
+<!-- Scripts -->
+<script src="mash-definitions.js"></script>
+<script src="mash-rules.js"></script>
+<script src="mash-engine.js"></script>
+<script src="mash-storage.js"></script>
+<script src="mash-ui.js"></script>
 
-        <div class="scenario-actions">
-          <button id="btnSaveScenario" class="btn">Save Scenario</button>
-          <button id="btnExportScenario" class="btn btn2">Export JSON</button>
-        </div>
-
-        <div>
-          <label for="savedScenarioSelect">Saved Scenarios</label>
-          <select id="savedScenarioSelect"></select>
-          <div class="hint">Pick one to load settings and compare projections.</div>
-        </div>
-
-        <div class="scenario-actions">
-          <button id="btnLoadScenario" class="btn">Load</button>
-          <button id="btnDeleteScenario" class="btn btn2">Delete</button>
-        </div>
-      </div>
-
-      <div class="small" id="scenarioStatus" style="margin-top:10px;color:#9ca3af;"></div>
-    </section>
-
-    <section class="panel">
-      <h2>Results</h2>
-
-      <div class="results">
-        <div class="card">
-          <div class="cardtitle">Baseline (Ground Truth)</div>
-          <div id="baselineBlock"></div>
-        </div>
-
-        <div class="card">
-          <div class="cardtitle">Scenario Projection</div>
-          <div id="scenarioBlock"></div>
-        </div>
-
-        <div class="card">
-          <div class="cardtitle">Stripping Run Estimate (NO CUTS)</div>
-          <div id="stripBlock"></div>
-        </div>
-
-        <div class="card warn" id="ruleBlock" style="display:none">
-          <div class="cardtitle">Rule Notes</div>
-          <div id="ruleNotes"></div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- Load order matters -->
-  <script src="mash-definitions.js?v=1.0.0"></script>
-  <script src="mash-rules.js?v=1.0.0"></script>
-  <script src="mash-engine.js?v=1.0.0"></script>
-  <script src="mash-storage.js?v=1.0.0"></script>
-  <script src="mash-ui.js?v=1.0.0"></script>
-
-  <!-- Optional stubs (safe) -->
-  <script src="mash-log.js?v=1.0.0"></script>
-  <script src="mash-topup.js?v=1.0.0"></script>
 </body>
 </html>
